# evalyn

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  QUICKSTART_UPDATED.md  README.md  docker-compose.yml  main.py  requirements.txt  sandbox_service.py  test_components.py
agents/: __init__.py  llm_client.py  output_schema.py  prompt_builder.py  reviewer.py  sandbox.py
api/: app.py
api/routers/: assignments.py  courses.py  reviews.py  submissions.py
bot/handlers/: admin.py
bot/keyboards/: main_menu.py
bot/middlewares/: auth.py
bot/states/: assignment.py  course.py  registration.py  review.py  submission.py
core/: config.py  models_registry.py
db/: base.py  unit_of_work.py
db/migrations/: env.py
docs/: HW_CHECKER_SETUP.md
examples/: hw_checker_rule_example.json
jupyter_sandbox/: COMPLETION_REPORT.md  COPILOT.md  IMPLEMENTATION_PLAN.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  STRUCTURE_COMPLETE.txt  check_imports.py  general_example.py  pyproject.toml  requirements.txt  task.md
jupyter_sandbox/docs/: api.md  architecture.md  installation.md
jupyter_sandbox/sandbox/: __init__.py  container.py  errors.py  gvisor_provider.py  kernel_orchestrator.py  manager.py  models.py  session.py  utils.py  venv_storage.py
jupyter_sandbox/tests/: conftest.py  test_container.py  test_gvisor_provider.py  test_kernel_orchestrator.py  test_manager.py  test_models.py  test_session.py  test_venv_storage.py
rule_engine/: README.md  pyproject.toml  test_check_1.py
services/: hw_checker_service.py  review_scheduler.py  review_service.py
(+89 files in other folders)
